tests/SemanticError/Fonctions/Test7/ReturnExpression.c
char fonction(){
	return 256*3;
}

int main(){
	int a;
	a=fonction();
	return a;
}
